# autorace2025_vision

./: .gitignore  README.md  commit.md  manage_autorace_symlinks.sh
camera_merger/: CMakeLists.txt  README.md  package.xml
camera_merger/launch/: camera_merger.launch
camera_merger/src/: camera_merger_node.cpp
color_detector/: CMakeLists.txt  README.md  package.xml
color_detector/launch/: color_detector.launch
color_detector/src/: color_detector.cpp
image_preprocessing/: CMakeLists.txt  package.xml
image_preprocessing/src/: hsv_fit.py  image_birdeye.py  image_hsv.py  image_roi.py
lane_pkg/: package.xml
lane_pkg/launch/: lane_detection.launch
lane_pkg/src/: lane_detection.py  slidewindow.py  stopline_detector.py
line_red/: CMakeLists.txt  package.xml
line_red/launch/: red.launch
line_red/src/: red.cpp
morai_lane/: CMakeLists.txt  package.xml
morai_lane/src/: result__gazebo.py  result_gazebo.py  result_gazebo_.py
onelane_detection/: CMakeLists.txt  README.md  package.xml
onelane_detection/launch/: onelane_detection.launch
onelane_detection/src/: onelane_detection.py
sign_detector/: CMakeLists.txt  README.md  package.xml
sign_detector/launch/: sign_recognizer.launch
sign_detector/scripts/: sign_recognizer_node.py
stopline_pkg/: CMakeLists.txt  HOUGH_LINE_IMPROVEMENTS.md  IMPROVEMENT_SUMMARY.md  LAB_COLORSPACE_ANALYSIS.md  README.md  package.xml
stopline_pkg/launch/: start.launch  start_yalo.launch  start_yolo.launch  stopline_detection.launch  test.launch
stopline_pkg/src/: stopline_detection_node.py  stopline_detector.py
yolov8_nuc_optimized/: CMakeLists.txt  README.md  package.xml
yolov8_nuc_optimized/launch/: yolov8_detector.launch  yolov8_openvino.launch
yolov8_nuc_optimized/scripts/: download_model.sh  install_dependencies.sh  restore_ros_packages.sh  test_quick.sh  yolov8_detector.py  yolov8_optimizer.py
yolov8_nuc_optimized/scripts/only_right_sign_openvino_model/: metadata.yaml  only_right_sign.xml
yolov8_nuc_optimized/scripts/sign_openvino_model/: metadata.yaml  sign.xml
